--- a/src/gas/TestDialog.html
+++ b/src/gas/TestDialog.html
@@ -9,6 +9,7 @@
         :root {
             --bg: #0f0f0f;
             --surface: #1a1a1a;
+            --surface-hover: #2a2a2a;
             --primary: #6366f1;
             --primary-hover: #818cf8;
             --text: #e5e5e5;
@@ -17,6 +18,7 @@
             --success: #22c55e;
             --warning: #f59e0b;
             --error: #ef4444;
+            --log-bg: #111;
         }
 
         * {
@@ -29,17 +31,19 @@
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
             background: var(--bg);
             color: var(--text);
-            min-height: 100vh;
+            height: 100vh;
             display: flex;
             flex-direction: column;
         }
 
         .header {
-            padding: 16px 20px;
+            padding: 12px 20px;
             border-bottom: 1px solid var(--border);
             display: flex;
             align-items: center;
             gap: 12px;
+            background: var(--surface);
+            flex-shrink: 0;
         }
 
         .header h1 {
@@ -69,37 +73,41 @@
             padding: 16px;
             display: flex;
             flex-direction: column;
-            gap: 16px;
+            gap: 12px;
+            overflow-y: auto;
+            background: var(--bg);
+            flex-shrink: 0;
         }
 
         .sidebar h2 {
-            font-size: 14px;
+            font-size: 12px;
             color: var(--text-muted);
             text-transform: uppercase;
             letter-spacing: 0.5px;
+            margin-bottom: 4px;
         }
 
         .trigger-btn {
             display: flex;
             align-items: center;
             gap: 10px;
-            padding: 12px 16px;
+            padding: 10px 12px;
             background: var(--surface);
             border: 1px solid var(--border);
-            border-radius: 8px;
+            border-radius: 6px;
             color: var(--text);
-            font-size: 14px;
+            font-size: 13px;
             cursor: pointer;
             transition: all 0.2s;
         }
 
         .trigger-btn:hover {
             border-color: var(--primary);
-            background: rgba(99, 102, 241, 0.1);
+            background: var(--surface-hover);
         }
 
         .trigger-btn .icon {
-            font-size: 20px;
+            font-size: 18px;
         }
 
         .trigger-btn .label {
@@ -107,19 +115,20 @@
             text-align: left;
         }
 
-        .trigger-btn .badge {
-            font-size: 10px;
-            padding: 2px 6px;
-            border-radius: 4px;
-            background: var(--primary);
-            color: #fff;
+        /* Chat Area */
+        .content-area {
+            flex: 1;
+            display: flex;
+            flex-direction: column;
+            overflow: hidden;
+            position: relative;
         }
 
-        /* Chat Area */
         .chat-container {
             flex: 1;
             display: flex;
             flex-direction: column;
+            overflow: hidden;
         }
 
         .messages {
@@ -132,11 +141,13 @@
         }
 
         .message {
-            max-width: 80%;
+            max-width: 85%;
             padding: 12px 16px;
-            border-radius: 12px;
+            border-radius: 8px;
             line-height: 1.5;
             white-space: pre-wrap;
+            font-size: 14px;
+            position: relative;
         }
 
         .message.user {
@@ -164,6 +175,69 @@
             background: rgba(239, 68, 68, 0.1);
             border-color: var(--error);
             color: var(--error);
+            align-self: flex-start;
+        }
+
+        /* Logs Section */
+        .logs-panel {
+            height: 200px;
+            border-top: 1px solid var(--border);
+            background: var(--log-bg);
+            display: flex;
+            flex-direction: column;
+            transition: height 0.3s ease;
+        }
+
+        .logs-panel.minimized {
+            height: 32px;
+        }
+
+        .logs-header {
+            padding: 6px 16px;
+            height: 32px;
+            display: flex;
+            align-items: center;
+            gap: 8px;
+            border-bottom: 1px solid var(--border);
+            cursor: pointer;
+            user-select: none;
+            background: var(--surface);
+        }
+
+        .logs-header:hover {
+            background: var(--surface-hover);
+        }
+
+        .logs-title {
+            font-size: 12px;
+            font-weight: 600;
+            color: var(--text-muted);
+            text-transform: uppercase;
+            flex: 1;
+        }
+
+        .logs-content {
+            flex: 1;
+            overflow-y: auto;
+            padding: 8px;
+            font-family: 'Menlo', 'Monaco', 'Courier New', monospace;
+            font-size: 11px;
+            color: #9ca3af;
+        }
+
+        .log-entry {
+            padding: 2px 4px;
+            border-radius: 2px;
+            border-bottom: 1px solid rgba(255, 255, 255, 0.05);
+        }
+
+        .log-entry:hover {
+            background: rgba(255, 255, 255, 0.05);
+        }
+
+        .log-time {
+            color: #6b7280;
+            margin-right: 8px;
         }
 
         /* Input Area */
@@ -172,14 +246,15 @@
             border-top: 1px solid var(--border);
             display: flex;
             gap: 12px;
+            background: var(--bg);
         }
 
         .input-area input {
             flex: 1;
-            padding: 12px 16px;
+            padding: 10px 16px;
             background: var(--surface);
             border: 1px solid var(--border);
-            border-radius: 8px;
+            border-radius: 6px;
             color: var(--text);
             font-size: 14px;
             outline: none;
@@ -190,10 +265,10 @@
         }
 
         .input-area button {
-            padding: 12px 24px;
+            padding: 10px 20px;
             background: var(--primary);
             border: none;
-            border-radius: 8px;
+            border-radius: 6px;
             color: #fff;
             font-size: 14px;
             font-weight: 500;
@@ -215,6 +290,7 @@
             display: flex;
             gap: 4px;
             padding: 12px 16px;
+            align-self: flex-start;
         }
 
         .loading span {
@@ -256,38 +332,32 @@
     </div>
 
     <div class="main">
-        <!-- Sidebar: Trigger Simulation -->
+        <!-- Sidebar -->
         <div class="sidebar">
             <h2>Simulate Triggers</h2>
-
             <button class="trigger-btn" onclick="simulateTrigger('manual', {})">
                 <span class="icon">💬</span>
                 <span class="label">Manual Chat</span>
-                <span class="badge">Active</span>
             </button>
-
             <button class="trigger-btn" onclick="simulateTrigger('webhook', {method: 'POST', body: '{}'})">
                 <span class="icon">🔗</span>
                 <span class="label">Webhook POST</span>
             </button>
-
             <button class="trigger-btn" onclick="simulateTrigger('cron', {schedule: '0 9 * * *'})">
                 <span class="icon">⏰</span>
                 <span class="label">Cron Job</span>
             </button>
-
             <button class="trigger-btn" onclick="simulateTrigger('sheets_edit', {range: 'A1', value: 'New Value'})">
                 <span class="icon">📊</span>
                 <span class="label">Sheets Edit</span>
             </button>
-
             <button class="trigger-btn" onclick="simulateTrigger('sheets_submit', {values: ['Name', 'Email']})">
                 <span class="icon">📝</span>
                 <span class="label">Form Submit</span>
             </button>
 
             <div style="margin-top: auto; padding-top: 16px; border-top: 1px solid var(--border);">
-                <h2 style="margin-bottom: 12px;">Settings</h2>
+                <h2 style="margin-bottom: 8px;">Settings</h2>
                 <button class="trigger-btn" onclick="checkApiKey()">
                     <span class="icon">🔑</span>
                     <span class="label">Check API Key</span>
@@ -295,17 +365,31 @@
             </div>
         </div>
 
-        <!-- Chat Area -->
-        <div class="chat-container">
-            <div class="messages" id="messages">
-                <div class="message system">
-                    👋 Welcome! Use the sidebar to simulate different triggers, or type a message below.
+        <!-- Right Side: Chat + Logs -->
+        <div class="content-area">
+            <div class="chat-container">
+                <div class="messages" id="messages">
+                    <div class="message system">
+                        👋 Welcome! Logs will appear in the panel below during execution.
+                    </div>
+                </div>
+
+                <div class="input-area">
+                    <input type="text" id="input" placeholder="Type your message..." onkeypress="handleKeyPress(event)">
+                    <button id="sendBtn" onclick="sendMessage()">Send</button>
                 </div>
             </div>
 
-            <div class="input-area">
-                <input type="text" id="input" placeholder="Type your message..." onkeypress="handleKeyPress(event)">
-                <button id="sendBtn" onclick="sendMessage()">Send</button>
+            <!-- Logs Panel -->
+            <div class="logs-panel" id="logsPanel">
+                <div class="logs-header" onclick="toggleLogs()">
+                    <span class="logs-title">📋 Execution Logs</span>
+                    <span style="font-size: 12px; transform: rotate(0deg); transition: transform 0.2s;"
+                        id="logsIcon">▼</span>
+                </div>
+                <div class="logs-content" id="logsContent">
+                    <div class="log-entry"><span class="log-time">System</span> Ready for execution...</div>
+                </div>
             </div>
         </div>
     </div>
@@ -314,6 +398,31 @@
         const messagesEl = document.getElementById('messages');
         const inputEl = document.getElementById('input');
         const sendBtn = document.getElementById('sendBtn');
+        const logsPanel = document.getElementById('logsPanel');
+        const logsContent = document.getElementById('logsContent');
+        const logsIcon = document.getElementById('logsIcon');
+
+        function toggleLogs() {
+            logsPanel.classList.toggle('minimized');
+            logsIcon.style.transform = logsPanel.classList.contains('minimized') ? 'rotate(180deg)' : 'rotate(0deg)';
+        }
+
+        function addLog(message) {
+            const div = document.createElement('div');
+            div.className = 'log-entry';
+
+            // Highlight specific log types
+            if (message.includes('Error')) div.style.color = '#ef4444';
+            if (message.includes('Executing node')) div.style.color = '#6366f1';
+
+            div.textContent = message;
+            logsContent.appendChild(div);
+            logsContent.scrollTop = logsContent.scrollHeight;
+        }
+
+        function clearLogs() {
+            logsContent.innerHTML = '';
+        }
 
         function addMessage(content, type = 'assistant') {
             const div = document.createElement('div');
@@ -340,6 +449,21 @@
             }
         }
 
+        function processResult(result) {
+            // Display Logs
+            if (result.logs && Array.isArray(result.logs)) {
+                result.logs.forEach(log => addLog(log));
+            }
+
+            // Display Output or Error
+            if (result.success) {
+                addMessage(result.output || 'Done');
+            } else {
+                addMessage(result.error || 'Unknown error', 'error');
+                addLog(`ERROR: ${result.error}`);
+            }
+        }
+
         function sendMessage() {
             const input = inputEl.value.trim();
             if (!input) return;
@@ -349,21 +473,20 @@
             sendBtn.disabled = true;
 
             const loading = addLoading();
+            clearLogs();
+            addLog(`[Client] Sending request: ${input}`);
 
             google.script.run
                 .withSuccessHandler(function (result) {
                     loading.remove();
                     sendBtn.disabled = false;
-                    if (result.success) {
-                        addMessage(result.output || 'Done');
-                    } else {
-                        addMessage(result.error || 'Unknown error', 'error');
-                    }
+                    processResult(result);
                 })
                 .withFailureHandler(function (error) {
                     loading.remove();
                     sendBtn.disabled = false;
                     addMessage(error.message || 'Request failed', 'error');
+                    addLog(`[Client Error] ${error.message}`);
                 })
                 .runWorkflow(input, 'manual', {});
         }
@@ -371,9 +494,11 @@
         function simulateTrigger(triggerType, meta) {
             addMessage(`[Simulating ${triggerType} trigger]\n${JSON.stringify(meta, null, 2)}`, 'system');
 
+            clearLogs();
+            addLog(`[Client] Simulating trigger: ${triggerType}`);
+
             const loading = addLoading();
 
-            // For triggers that need input, show a prompt
             let input = '';
             if (triggerType === 'manual') {
                 inputEl.focus();
@@ -392,30 +517,32 @@
             google.script.run
                 .withSuccessHandler(function (result) {
                     loading.remove();
-                    if (result.success) {
-                        addMessage(result.output || 'Trigger executed successfully');
-                    } else {
-                        addMessage(result.error || 'Trigger failed', 'error');
-                    }
+                    processResult(result);
                 })
                 .withFailureHandler(function (error) {
                     loading.remove();
                     addMessage(error.message || 'Trigger failed', 'error');
+                    addLog(`[Client Error] ${error.message}`);
                 })
                 .runWorkflow(input, triggerType, meta);
         }
 
         function checkApiKey() {
+            clearLogs();
+            addLog('[Client] Checking API Key...');
             google.script.run
                 .withSuccessHandler(function (result) {
                     if (result && result.hasKey) {
                         addMessage('✅ Gemini API Key is configured', 'system');
+                        addLog('[System] API Key present');
                     } else {
                         addMessage('❌ Gemini API Key is NOT configured. Please sync from Gemini Agent Builder.', 'system');
+                        addLog('[System] API Key MISSING');
                     }
                 })
                 .withFailureHandler(function (error) {
                     addMessage('Failed to check API key: ' + error.message, 'error');
+                    addLog(`[Error] ${error.message}`);
                 })
                 .checkSettings();
         }
