feat: add social media meta tags for better preview

--- a/index.html
+++ b/index.html
@@ -6,6 +6,20 @@
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>G8N: Gemini Workflow Orchestrator</title>
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://Wolke.github.io/GeminiAgentBuilder/" />
+  <meta property="og:title" content="G8N: Gemini Workflow Orchestrator" />
+  <meta property="og:description"
+    content="Build and deploy Gemini-powered agents to Google Workspace in minutes using a visual node-based canvas." />
+  <meta property="og:image" content="https://Wolke.github.io/GeminiAgentBuilder/g8n_banner.jpg" />
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:url" content="https://Wolke.github.io/GeminiAgentBuilder/" />
+  <meta property="twitter:title" content="G8N: Gemini Workflow Orchestrator" />
+  <meta property="twitter:description"
+    content="Build and deploy Gemini-powered agents to Google Workspace in minutes." />
+  <meta property="twitter:image" content="https://Wolke.github.io/GeminiAgentBuilder/g8n_banner.jpg" />
 </head>
 
 <body>
